--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "fix:prettier": "prettier -w ."
   },
   "dependencies": {
+    "@alpinejs/focus": "^3.14.8",
+    "@astrojs/alpinejs": "^0.4.1",
     "@astrojs/rss": "^4.0.10",
     "@astrojs/sitemap": "^3.2.1",
     "@astrolib/analytics": "^0.6.1",
     "@astrolib/seo": "^1.0.0-beta.8",
     "@fontsource-variable/inter": "^5.1.0",
+    "@types/alpinejs": "^3.13.11",
+    "alpinejs": "^3.14.8",
     "astro": "^5.0.3",
     "astro-embed": "^0.9.0",
     "astro-icon": "^1.1.4",
