--- a/src/config.yaml
+++ b/src/config.yaml
@@ -11,7 +11,7 @@ metadata:
   title:
     default: Alejandra Perez Curti
     template: '%s — AstroWind'
-  description: "\U0001F680 Suitable for Startups, Small Business, Sass Websites, Professional Portfolios, Marketing Websites, Landing Pages & Blogs."
+  description: "Discover Alejandra Perez Curti's breathtaking oil paintings inspired by nature, birds, and New Zealand's landscapes."
   robots:
     index: true
     follow: true
