--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,6 +1,6 @@
 site:
   name: 'Alejandra Perez Curti'
-  site: 'https://curti.netlify.app/'
+  site: 'https://curti.nz'
   base: '/'
   trailingSlash: false
 
